--- a/Python-ifed.ipynb
+++ b/Python-ifed.ipynb
@@ -27,8 +27,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Step 0\n",
     "\n",
@@ -47,7 +45,11 @@
     "https://www.atlassian.com/git\n",
     "\n",
     "https://www.tutorialspoint.com/git/git_basic_concepts.htm"
-   ]
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
@@ -62,15 +64,15 @@
     "### Describe what each of the following means\n",
     "\n",
     "#### Production\n",
-    "(Insert answer here)\n",
+    "The code that is reliable and is the final version and which is available to the client is called Production Code.\n",
     "#### Clean \n",
-    "(Insert answer here)\n",
+    "The code that is easily readable and understandable to both the author and anyone who has access to the code is called Clean Code.\n",
     "#### Modular\n",
-    "(Insert answer here)\n",
+    "The code which can be divided into independent blocks which when combined produces a meaningful code is called Modular Code.\n",
     "#### Module\n",
-    "(Insert answer here)\n",
+    "The individual piece of code is called a Module.\n",
     "#### Refactoring code\n",
-    "(Insert answer here)"
+    "The process of restructuring or simplifying the design of a code without changing its logic or behaviour is called Refactoring Code."
    ]
   },
   {
