--- a/Python-ifed.ipynb
+++ b/Python-ifed.ipynb
@@ -275,7 +275,7 @@
    "source": [
     "new_df=df\n",
     "new_df.columns = df.columns.str.replace(' ','_')\n",
-    "new_df.head()"
+    "new_df.head"
    ]
   },
   {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,9 +339,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "96\nDuration: 11.977692365646362 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "start = time.time()\n",
     "verified_elements = []\n",
@@ -363,11 +371,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "96\nDuration: 0.028920412063598633 seconds\n"
+     ]
+    }
+   ],
    "source": [
-    "# Insert answer here\n",
+    "start=time.time()\n",
+    "verified_elements=np.intersect1d(subset_elements,all_elements)\n",
     "\n",
     "print(len(verified_elements))\n",
     "print('Duration: {} seconds'.format(time.time() - start))"
@@ -382,11 +399,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "96\nDuration: 0.005990028381347656 seconds\n"
+     ]
+    }
+   ],
    "source": [
-    "# Insert answer here\n",
+    "start=time.time()\n",
+    "verified_elements=list(set(all_elements)&set(subset_elements))\n",
     "\n",
     "print(len(verified_elements))\n",
     "print('Duration: {} seconds'.format(time.time() - start))"
