--- a/Python-ifed.ipynb
+++ b/Python-ifed.ipynb
@@ -562,9 +562,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "============================= test session starts =============================\nplatform win32 -- Python 3.9.1, pytest-6.2.1, py-1.10.0, pluggy-0.13.1\nrootdir: c:\\Users\\Anurag\\Documents\\GitHub\\Python-ifed-challenge-\ncollected 4 items\n\ntest_nearest_square.py ....                                              [100%]\n\n============================== 4 passed in 0.02s ==============================\n"
+     ]
+    }
+   ],
    "source": [
     "! pytest test_nearest_square.py"
    ]
@@ -618,11 +626,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert your code here"
+    "import pokebase as pb"
    ]
   },
   {
