challenge 2 step 1 completed

--- a/Python-ifed.ipynb
+++ b/Python-ifed.ipynb
@@ -626,11 +626,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<type-jigglypuff>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 1
+    }
+   ],
    "source": [
-    "import pokebase as pb"
+    "import pokebase as pb\n",
+    "jigglypuff=pb.pokemon('jigglypuff')\n",
+    "pb.type_('jigglypuff')"
    ]
   },
   {
