--- a/Python-ifed.ipynb
+++ b/Python-ifed.ipynb
@@ -626,24 +626,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "<type-jigglypuff>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 1
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Type 1: normal\nType 2: fairy\n"
+     ]
     }
    ],
    "source": [
-    "import pokebase as pb\n",
-    "jigglypuff=pb.pokemon('jigglypuff')\n",
-    "pb.type_('jigglypuff')"
+    "import requests\n",
+    "\n",
+    "url = \"http://pokeapi.co/api/v2/pokemon/jigglypuff/\"\n",
+    "\n",
+    "payload = \"\"\n",
+    "response = requests.request(\"GET\", url, data=payload)\n",
+    "\n",
+    "data = response.json()\n",
+    "print(\"Type 1:\",data[\"types\"][0][\"type\"][\"name\"])\n",
+    "print(\"Type 2:\",data[\"types\"][1][\"type\"][\"name\"])\n"
    ]
   },
   {
@@ -657,11 +661,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 72,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "fighting\npoison\nsteel\nfighting\nbug\ndark\n"
+     ]
+    }
+   ],
    "source": [
-    "# Insert your code here"
+    "url1=(data[\"types\"][0][\"type\"][\"url\"])\n",
+    "url2=(data[\"types\"][1][\"type\"][\"url\"])\n",
+    "\n",
+    "payload1 = \"\"\n",
+    "payload2 = \"\"\n",
+    "\n",
+    "response1 = requests.request(\"GET\", url1, data=payload1)\n",
+    "response2 = requests.request(\"GET\", url2, data=payload2)\n",
+    "\n",
+    "data1 = response1.json()\n",
+    "data2 = response2.json()\n",
+    "\n",
+    "for i in range(len(data1[\"damage_relations\"][\"double_damage_from\"])):\n",
+    "  print(data1[\"damage_relations\"][\"double_damage_from\"][i][\"name\"])\n",
+    "  \n",
+    "for i in range(len(data2[\"damage_relations\"][\"double_damage_from\"])):\n",
+    "  print(data2[\"damage_relations\"][\"double_damage_from\"][i][\"name\"])\n",
+    "\n",
+    "for i in range(len(data1[\"damage_relations\"][\"half_damage_from\"])):\n",
+    "  print(data1[\"damage_relations\"][\"half_damage_from\"][i][\"name\"])\n",
+    "\n",
+    "for i in range(len(data2[\"damage_relations\"][\"half_damage_from\"])):\n",
+    "  print(data2[\"damage_relations\"][\"half_damage_from\"][i][\"name\"])\n"
    ]
   },
   {
@@ -673,11 +709,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "mankey,primeape,poliwrath,machop,machoke,\n",
+      "\n",
+      "bulbasaur,ivysaur,venusaur,weedle,kakuna,\n",
+      "\n",
+      "magnemite,magneton,forretress,steelix,scizor,\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Insert your code here"
+    "url1=(data[\"types\"][0][\"type\"][\"url\"])\n",
+    "url2=(data[\"types\"][1][\"type\"][\"url\"])\n",
+    "\n",
+    "payload=\"\"\n",
+    "payload1 = \"\"\n",
+    "payload2 = \"\"\n",
+    "\n",
+    "response = requests.request(\"GET\", url, data=payload)\n",
+    "response1 = requests.request(\"GET\", url1, data=payload1)\n",
+    "response2 = requests.request(\"GET\", url2, data=payload2)\n",
+    "\n",
+    "pdata = response.json()\n",
+    "data1 = response1.json()\n",
+    "data2 = response2.json()\n",
+    "\n",
+    "ddf=[]\n",
+    "for i in range(len(data1[\"damage_relations\"][\"double_damage_from\"])):\n",
+    "  ddf.append(data1[\"damage_relations\"][\"double_damage_from\"][i][\"url\"])\n",
+    "\n",
+    "for i in range(len(data2[\"damage_relations\"][\"double_damage_from\"])):\n",
+    "  ddf.append(data2[\"damage_relations\"][\"double_damage_from\"][i][\"url\"])\n",
+    "\n",
+    "for i in range(len(ddf)):\n",
+    "    pdata = requests.request(\"GET\", ddf[i], data=payload).json()\n",
+    "    for j in range(5):\n",
+    "        print(pdata[\"pokemon\"][j][\"pokemon\"][\"name\"],end=',')\n",
+    "    print(\"\\n\")"
    ]
   },
   {
@@ -691,21 +766,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform darwin -- Python 3.8.5, pytest-6.2.1, py-1.10.0, pluggy-0.13.1\n",
-      "rootdir: /Users/abhijitramesh/development/Python-ifed\n",
-      "collected 4 items                                                              \u001b[0m\n",
-      "\n",
-      "test_abilities.py \u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m                                                   [100%]\u001b[0m\n",
-      "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m4 passed\u001b[0m\u001b[32m in 2.75s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
+      "============================= test session starts =============================\nplatform win32 -- Python 3.9.1, pytest-6.2.1, py-1.10.0, pluggy-0.13.1\nrootdir: c:\\Users\\Anurag\\Documents\\GitHub\\Python-ifed-challenge-\ncollected 4 items\n\ntest_abilities.py ....                                                   [100%]\n\n============================== 4 passed in 1.38s ==============================\n"
      ]
     }
    ],
